# octopy-admin

./: .gitignore  .pre-commit-config.yaml  404.html  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  github_constructor.py  github_gql_constructor.py  github_gql_provider.py  github_provider.py  github_rest_contructor.py  index.html  main.py  mkdocs.yml  objects.inv  org_repos_provider.py  pyproject.toml  repo_collaborators_provider.py  requirements.txt  search.html  search.py  sitemap.xml
.devcontainer/: devcontainer.json  post-install.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-linter.yml  codeql-analysis.yml  mkdocs-publish.yml  python-build.yml  python-publish.yml  python-tests.yml  reporting.yml  super-linter.yml
docs/: index.md  reference.md
graphql/: create-enterprise-org.gql  create-repository.gql  get-enterprise-orgs.gql  get-org-repos.gql  get-repo-collaborators.gql
octopy/: __init__.py  github_gql_constructor.py  github_gql_provider.py  github_rest_contructor.py  graph_query.py  graph_query_converter.py  graph_request.py  main.py  rest_patch.py  rest_query.py  rest_request.py  search.py
octopy/graphql/: get-enterprise-orgs.gql  get-org-repos.gql  get-repo-collaborators.gql
octopy/rest/: rest_delete.py  rest_get.py  rest_post.py
octopy_admin/: __init__.py  gql_constructor.py  gql_provider.py  rest_contructor.py
octopy_admin/gql_queries/: create-enterprise-org.gql
octopy_admin/graph/: __init__.py  graph_client.py  graph_mutation.py  graph_query.py
octopy_admin/reports/: collaborator_permission_report.py  contributor_report.py  (+1 more)
octopyadmin/: __init__.py  gql_constructor.py  gql_provider.py  rest_contructor.py
reference/: index.html
reports/: collaborator_permission_report.py  contributor_report.py  enterprise_environment_report.py  forked_repository_report.py  get_last_commiter_on_repo.py  org_admin_report.py  repo_branch_protection_report.py  test_report.py  webhook_delivery_report.py
scripts/: branch_protection_audit_log_events.py  create_autolink_reference.py  create_branch_protection_rules.py  create_enterprise_org.py  create_team_in_org.py  find_public_repos_for_users_in_org.py  find_repo_creator.py  get_branch_protection_audit_log_events.py  update_branch_protection_rules.py  update_string_in_webhook_url.py
search/: search_index.json
tests/: graph_test.py  rest_test.py  test-sample.py  test_graphql_query.py  test_rest_delete.py  test_rest_get.py  test_rest_patch.py  test_rest_post.py  test_rest_query.py
(+211 files in other folders)
