[tool.poetry]
name = "octopy_admin"
version = "0.2.9"
description = "OctoPy Admin is a python library for interacting with the GitHub GraphQL and REST APIs."
authors = ["Brett Kuhlman <kuhlman-labs@github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
gql = "^3.4.0"
aiohttp = "^3.8.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
gql = "^3.4.0"
aiohttp = "^3.8.1"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
pytest = "^7.2.1"
black = "^22.12.0"

pre-commit = "^3.1.1"
autoflake = "^2.0.0"
isort = "^5.11.4"
mkdocs-material = "^9.0.6"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
pylint = "^2.16.2"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
