[tool.poetry]
name = "octopy_admin"
version = "0.2.9"
description = "OctoPy Admin is a python library for interacting with the GitHub GraphQL and REST APIs."
authors = ["Brett Kuhlman <kuhlman-labs@github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
gql = "^3.4.0"
aiohttp = "^3.8.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
gql = "^3.4.0"
aiohttp = "^3.8.1"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
pytest = "^7.3.1"
black = "^23.3.0"

pre-commit = "^3.2.2"
autoflake = "^2.1.1"
isort = "^5.12.0"
mkdocs-material = "^9.1.6"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.10.1"
pylint = "^2.17.3"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
